Fixed image width so it doesn't overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1127,3 +1127,7 @@ ul {
 #sideNav {
   list-style-type: none;
 }
+
+img {
+  max-width: 920px;
+}
